# Triangles

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: Triangles_test.cpp
